--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,14 +32,14 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
 
-    # - name: Build Packaging
-    #   run: dotnet build Content.Packaging --configuration Release --no-restore /m
+    - name: Build Packaging
+      run: dotnet build Content.Packaging --configuration Release --no-restore /m
 
-    # - name: Package server
-    #   run: dotnet run --project Content.Packaging server --platform linux-x64
+    - name: Package server
+      run: dotnet run --project Content.Packaging server --platform linux-x64
 
-    # - name: Package client
-    #   run: dotnet run --project Content.Packaging client --no-wipe-release
+    - name: Package client
+      run: dotnet run --project Content.Packaging client --no-wipe-release
 
     - name: Publish version
       run: python Tools/publish_multi_request.py
