--- a/Resources/Prototypes/_Shitmed/Species/kobold.yml
+++ b/Resources/Prototypes/_Shitmed/Species/kobold.yml
@@ -6,7 +6,7 @@
 - type: species
   id: Kobold
   name: species-name-kobold
-  roundStart: false # sad...
+  roundStart: true # sad...
   prototype: MobKobold
   sprites: MobKoboldSprites
   dollPrototype: MobKoboldDummy
