--- a/Resources/Prototypes/Nyanotrasen/Species/Oni.yml
+++ b/Resources/Prototypes/Nyanotrasen/Species/Oni.yml
@@ -18,7 +18,7 @@
 - type: species
   id: Oni
   name: species-name-oni
-  roundStart: false # CorvaxGoob Temporary hidden
+  roundStart: true # CorvaxGoob Temporary hidden
   prototype: MobOni
   dollPrototype: MobOniDummy
   markingLimits: MobOniMarkingLimits
