Revert "Временно включены все расы"
This reverts commit 9415081b0b1e9e314ed59ef4780d68f408cc6b5f.

--- a/Resources/Prototypes/Nyanotrasen/Species/felinid.yml
+++ b/Resources/Prototypes/Nyanotrasen/Species/felinid.yml
@@ -21,7 +21,7 @@
 - type: species
   id: Felinid
   name: species-name-felinid
-  roundStart: true # Goobstation change
+  roundStart: false # Goobstation change
   prototype: MobFelinid
   sprites: MobHumanSprites
   markingLimits: MobFelinidMarkingLimits
