--- a/Resources/Prototypes/_EinsteinEngines/Species/shadowkin.yml
+++ b/Resources/Prototypes/_EinsteinEngines/Species/shadowkin.yml
@@ -7,7 +7,7 @@
 - type: species
   id: Shadowkin
   name: species-name-shadowkin
-  roundStart: true # CorvaxGoob Temporary hidden
+  roundStart: false # CorvaxGoob Temporary hidden
   prototype: MobShadowkin
   sprites: MobShadowkinSprites
   defaultSkinTone: "#FFFFFF"
