--- a/Resources/Prototypes/_Shitmed/Species/abductor.yml
+++ b/Resources/Prototypes/_Shitmed/Species/abductor.yml
@@ -7,7 +7,7 @@
 - type: species
   id: Abductor
   name: species-name-abductor
-  roundStart: true
+  roundStart: false
   prototype: MobAbductor
   sprites: MobAbductorSprites
   markingLimits: MobHumanMarkingLimits
