--- a/Resources/Prototypes/_Shitmed/Species/monkey.yml
+++ b/Resources/Prototypes/_Shitmed/Species/monkey.yml
@@ -6,7 +6,7 @@
 - type: species
   id: Monkey
   name: species-name-monkey
-  roundStart: true # sad...
+  roundStart: false # sad...
   prototype: MobMonkey
   sprites: MobMonkeySprites
   dollPrototype: MobMonkeyDummy
