--- a/Resources/Prototypes/Species/gingerbread.yml
+++ b/Resources/Prototypes/Species/gingerbread.yml
@@ -9,7 +9,7 @@
 - type: species
   id: Gingerbread
   name: Gingerbread
-  roundStart: true # CorvaxGoob LPR bullshit
+  roundStart: false # CorvaxGoob LPR bullshit
   prototype: MobGingerbread
   sprites: MobGingerbreadSprites
   markingLimits: MobHumanMarkingLimits
