--- a/Resources/Prototypes/_CorvaxGoob/Entities/Mobs/Customization/Markings/fox_parts.yml
+++ b/Resources/Prototypes/_CorvaxGoob/Entities/Mobs/Customization/Markings/fox_parts.yml
@@ -3,7 +3,7 @@
   bodyPart: HeadTop
   markingCategory: HeadTop
   speciesRestriction: [Human]
-  sponsorOnly: false # Corvax-Sponsors
+  sponsorOnly: true # Corvax-Sponsors
   sprites:
   - sprite: _CorvaxGoob/Mobs/Customization/fox_parts.rsi
     state: ears_fox_outer
