--- a/Resources/Prototypes/_DV/Species/rodentia.yml
+++ b/Resources/Prototypes/_DV/Species/rodentia.yml
@@ -16,7 +16,7 @@
 - type: species
   id: Rodentia
   name: species-name-rodentia
-  roundStart: true # CorvaxGoob Temporary hidden
+  roundStart: false # CorvaxGoob Temporary hidden
   prototype: MobRodentia
   sprites: MobRodentiaSprites
   defaultSkinTone: "#747474"
