--- a/Resources/Prototypes/_EinsteinEngines/Species/ipc.yml
+++ b/Resources/Prototypes/_EinsteinEngines/Species/ipc.yml
@@ -10,7 +10,7 @@
   id: IPC
   name: species-name-ipc
   roundStart: true
-  sponsorOnly: false # CorvaxGoob-Sponsors
+  sponsorOnly: true # CorvaxGoob-Sponsors
   prototype: MobIPC
   sprites: MobIPCSprites
   markingLimits: MobIPCMarkingLimits
